@@ -82,11 +82,10 @@ public abstract class Node {
         if (this.lastChild != null) {
             this.lastChild.next = child;
             child.prev = this.lastChild;
-            this.lastChild = child;
         } else {
             this.firstChild = child;
-            this.lastChild = child;
         }
+        this.lastChild = child;
     }
 
     public void prependChild(Node child) {
@@ -118,6 +117,9 @@ public abstract class Node {
         this.prev = null;
     }
 
+    /**
+     * Inserts the {@code sibling} node after {@code this} node.
+     */
     public void insertAfter(Node sibling) {
         sibling.unlink();
         sibling.next = this.next;
@@ -132,6 +134,9 @@ public abstract class Node {
         }
     }
 
+    /**
+     * Inserts the {@code sibling} node before {@code this} node.
+     */
     public void insertBefore(Node sibling) {
         sibling.unlink();
         sibling.prev = this.prev;
@@ -146,13 +151,12 @@ public abstract class Node {
         }
     }
 
-
     /**
      * @return the source spans of this node if included by the parser, an empty list otherwise
      * @since 0.16.0
      */
     public List<SourceSpan> getSourceSpans() {
-        return sourceSpans != null ? Collections.unmodifiableList(sourceSpans) : Collections.<SourceSpan>emptyList();
+        return sourceSpans != null ? Collections.unmodifiableList(sourceSpans) : List.of();
     }
 
     /**
